@@ -4,9 +4,12 @@
 -- Avoid memset(NULL, 0, 0) to calm down the paranoid.
 -- Fix bug 252, invalid read of size 1 in ID3v2 parser due to forgotten
    offset from the frame flag bytes (unnoticed in practice for a long
-   time). Fuzzers are in the house again.
+   time). Fuzzers are in the house again. This one got CVE-2017-10683.
 -- Avoid a mostly harmless conditional jump depending on uninitialised
    fr->lay in compute_bpf() (mpg123_position()) when track is not ready yet.
+-- Fix undefined shifts on signed long mask in layer3.c (worked in practice,
+   never right in theory). Code might be a bit faster now, even.
+   Thanks to Agostino Sarubbo for reporting.
 
 1.25.0: MP3 now patent-free worldwide!
 -------
